Set background color for the page

--- a/exploreCalifornia/assets/stylesheets/main.css
+++ b/exploreCalifornia/assets/stylesheets/main.css
@@ -71,7 +71,7 @@ p {
 
 body {
   font: 100% Georgia, "Times New Roman", Times, serif;
-  background: #3C6B92;
+  background: #00cae4;
 }
 
 /* ^2 ------ global classes -------- */
